# bushtyping

./: .gitignore  README-en.md  README.md  pyproject.toml
src/bushtyping/: __init__.py  bushtyping.py  prepare_word_data.py
src/bushtyping.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/bushtyping/data/1級/: index.html
src/bushtyping/data/中2/: index.html
src/bushtyping/data/中3/: index.html
src/bushtyping/data/小1/: index.html
src/bushtyping/data/小2/: index.html
src/bushtyping/data/小3/: index.html
src/bushtyping/data/小4/: index.html
src/bushtyping/data/小5/: index.html
src/bushtyping/data/小6/: index.html
src/bushtyping/data/常用/: index.html
src/bushtyping/data/準1級/: index.html
src/bushtyping/data/高校/: index.html
src/bushtyping/data_loader/: kanji2radical_left_right.py  kanji2radical_top_bottom.py  words_1k.py  words_c2.py  words_c3.py  words_j.py  words_j1k.py  words_s1.py  words_s2.py  words_s3.py  words_s4.py  words_s5.py  words_s6.py
src/busutyping.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
